module(
    name = "grpcbox",
    version = "0.16.0",
)

bazel_dep(
    name = "rules_erlang",
    version = "3.9.11",
)

bazel_dep(
    name = "gazelle",
    repo_name = "bazel_gazelle",
    version = "0.28.0",
)


# erlang_package = use_extension(
#     "@rules_erlang//bzlmod:extensions.bzl",
#     "erlang_package",
# )


# use_repo(
#     erlang_package,
# )
