module(
    name = "grpcbox",
    version = "0.16.0",
)

bazel_dep(
    name = "rules_erlang",
    version = "3.9.11",
)

bazel_dep(
    name = "gazelle",
    repo_name = "bazel_gazelle",
    version = "0.28.0",
)

erlang_package = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_package",
)

erlang_package.hex_package(
    name = "acceptor_pool",
    version = "1.0.0",
    build_file = "@grpcbox//:bazel/BUILD.acceptor_pool",
)

erlang_package.hex_package(
    name = "chatterbox",
    pkg = "ts_chatterbox",
    version = "0.13.0",
    build_file = "@grpcbox//:bazel/BUILD.chatterbox",
)

erlang_package.hex_package(
    name = "ctx",
    version = "0.6.0",
    build_file = "@grpcbox//:bazel/BUILD.ctx",
)

erlang_package.hex_package(
    name = "gproc",
    version = "0.8.0",
    build_file = "@grpcbox//:bazel/BUILD.gproc",
)

erlang_package.hex_package(
    name = "hpack",
    pkg = "hpack_erl",
    version = "0.2.3",
    build_file = "@grpcbox//:bazel/BUILD.hpack",
)

use_repo(
    erlang_package,
    "acceptor_pool",
    "chatterbox",
    "ctx",
    "gproc",
)

erlang_dev_package = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_package",
    dev_dependency = True,
)

erlang_dev_package.hex_package(
    name = "counters",
    version = "0.2.1",
    build_file = "@grpcbox//:bazel/BUILD.counters",
)

erlang_dev_package.hex_package(
    name = "jsx",
    version = "3.1.0",
    build_file = "@grpcbox//:bazel/BUILD.jsx",
)

erlang_dev_package.hex_package(
    name = "opencensus",
    version = "0.9.3",
    build_file = "@grpcbox//:bazel/BUILD.opencensus",
)

erlang_dev_package.hex_package(
    name = "rfc3339",
    version = "0.9.0",
    build_file = "@grpcbox//:bazel/BUILD.rfc3339",
)

erlang_dev_package.hex_package(
    name = "wts",
    version = "0.3.0",
    build_file = "@grpcbox//:bazel/BUILD.wts",
)

use_repo(
    erlang_dev_package,
    "jsx",
    "opencensus",
)
